# agent-zoo

./: .gitignore  .mcp.json  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.en.md  README.ja.md  README.md  ROADMAP.md  TODO.md  agent-harness-design.md  docker-compose.strict.yml  docker-compose.yml  policy.toml  policy_candidate.toml  pyproject.toml
.codex/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci.yml  release.yml
addons/: openai_sse_parser.py  policy.py  policy_edit.py  policy_enforcer.py  sse_parser.py
bundle/: Makefile  docker-compose.yml  policy.toml
bundle/addons/: _db_secure.py  _fail_closed.py  _policy_lock.py  _status_constants.py  _url_scrub.py  policy.py  policy_edit.py  policy_enforcer.py  policy_inbox.py
bundle/container/: Dockerfile  Dockerfile.base  Dockerfile.codex  Dockerfile.gemini  Dockerfile.unified  run-codex.sh
bundle/dashboard/: .dockerignore  Dockerfile  app.py  requirements.txt
bundle/dashboard/static/: app.css  app.js
bundle/dashboard/templates/: index.html
bundle/dashboard/templates/partials/: inbox.html  requests.html  stats.html  tool-uses.html  whitelist.html
bundle/dns/: Corefile
bundle/host/: setup.sh
bundle/policy/: all.toml  claude.toml  codex.toml  gemini.toml  minimal.toml
bundle/templates/: HARNESS_RULES.md  README.md
bundle/templates/claude-code/: settings.json
bundle/templates/codex-cli/: config.toml
container/: Dockerfile  Dockerfile.base  Dockerfile.codex  Dockerfile.gemini  entrypoint.sh  run-codex.sh
dashboard/: app.py  requirements.txt
dashboard/templates/: index.html
dashboard/templates/partials/: requests.html  whitelist.html
dns/: Corefile
docs/: architecture.en.md  architecture.md  codex-integration.en.md  codex-integration.md  install-from-package.md  policy-reference.en.md  policy-reference.md  python-api.md  security.en.md  security.md
docs/adr/: 0001-policy-inbox.md  0002-dot-zoo-workspace-layout.md
docs/dev/: architecture.en.md  architecture.md  python-api.md  release-testing.md  security-notes.md
docs/dev/adr/: 0002-dot-zoo-workspace-layout.md  0003-e2e-test-strategy.md  0004-dashboard-external-deps-removal.md  0005-fail-closed-addons.md
docs/dev/reviews/: 2026-04-18-comprehensive-review.md
docs/dev/sprints/: 002-dot-zoo-workspace-layout.md  003-e2e-foundation-and-zoo-cli-unification.md  004-docs-ci-cleanup.md  005-critical-security.md  006-security-hardening.md  007-dashboard-zero-deps.md
docs/plans/: 2026-04-18-consolidated-work-breakdown.md  issue-64-zoo-certs-import.md  sprint-006-pr-d.md  sprint-006-pr-e.md  sprint-006-pr-f.md  sprint-007-pr-f.md  sprint-007-pr-g.md  sprint-007-pr-h.md  sprint-007-pr-i.md
docs/sprints/: 001-policy-inbox-and-base-image.md  002-dot-zoo-workspace-layout.md
docs/user/: inbox.md  install-from-package.md  policy-reference.en.md  policy-reference.md  security.en.md  security.md
host/: setup.sh  stop.sh
scripts/: README.md  check-release-cleanliness.sh  dogfood-dashboard.sh  migrate_candidates_to_inbox.py  release-prepare.sh  release_prepare_lib.py  show_candidates.py
src/zoo/: __init__.py  api.py  cli.py  runner.py
src/zoo/_init_assets/: workspace.gitignore
templates/: CLAUDE.harness.md  CODEX.harness.md  HARNESS_RULES.md  README.md  zoo-gitignore
tests/: test_addon_fail_closed.py  test_alert_rules.py  test_alerts.py  test_certs_bundle_autoaggregate.py  test_content_length_gate.py  test_dashboard.py  test_dashboard_asset_version.py  test_dashboard_csp.py  test_dashboard_csrf.py  test_dashboard_domain_validation.py  test_dashboard_inline_assets.py  test_dashboard_security_headers.py  test_dashboard_static.py  test_db_permissions.py  test_dependabot_config.py  test_dockerfile_ca_envvars.py  test_inbox_apply_accept.py  test_inbox_path_traversal.py  test_migrate_candidates_to_inbox.py  test_openai_responses_stream_parser.py  test_openai_sse_parser.py  test_path_rules.py  test_payload_rules.py  test_policy.py  test_policy_edit.py  test_policy_inbox.py  test_policy_lock.py  test_policy_profiles.py  test_rate_limit.py  test_release_prepare_lib.py  test_release_prepare_script.py  test_release_workflow.py  test_request_hook_wiring.py  test_runner_image_precheck.py  test_show_candidates.py  test_sse_parser.py  test_status_constants.py  test_tool_use_block_rules.py  test_tool_use_rules.py  test_url_scrub.py  (+4 more)
tests/e2e/: README.md  conftest.py  test_dashboard.py  test_dashboard_offline.py  test_proxy_block.py
