[project]
name = "agent-zoo"
version = "0.1.0"
description = "Security harness for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flask>=3.1",
    "tomli_w>=1.0",
]

[project.scripts]
zoo = "zoo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoo"]

[tool.uv]
exclude-newer = "2026-03-01T00:00:00Z"

[tool.pytest.ini_options]
testpaths = ["tests"]
