[project]
name = "agent-zoo"
version = "0.1.0"
description = "Security harness for AI coding agents (Claude Code, Codex CLI, etc.) — mitmproxy payload inspection + TOML policy control."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "ymdarake" },
]
keywords = [
    "ai",
    "agent",
    "claude",
    "codex",
    "security",
    "sandbox",
    "mitmproxy",
    "harness",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flask>=3.1",
    "tomli_w>=1.0",
]

[project.scripts]
zoo = "zoo.cli:app"

[project.urls]
Homepage = "https://github.com/ymdarake/agent-zoo"
Repository = "https://github.com/ymdarake/agent-zoo"
Issues = "https://github.com/ymdarake/agent-zoo/issues"
Changelog = "https://github.com/ymdarake/agent-zoo/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoo"]

[tool.hatch.build.targets.wheel.force-include]
"docker-compose.yml" = "zoo/_assets/docker-compose.yml"
"docker-compose.strict.yml" = "zoo/_assets/docker-compose.strict.yml"
"policy.toml" = "zoo/_assets/policy.toml"
"Makefile" = "zoo/_assets/Makefile"
"container" = "zoo/_assets/container"
"addons" = "zoo/_assets/addons"
"dashboard" = "zoo/_assets/dashboard"
"templates" = "zoo/_assets/templates"
"host" = "zoo/_assets/host"
"dns" = "zoo/_assets/dns"
"scripts" = "zoo/_assets/scripts"

[tool.hatch.build.targets.sdist]
include = [
    "src/zoo",
    "docker-compose.yml",
    "docker-compose.strict.yml",
    "policy.toml",
    "Makefile",
    "container",
    "addons",
    "dashboard",
    "templates",
    "host",
    "dns",
    "scripts",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "docs",
]

[tool.uv]
exclude-newer = "2026-03-01T00:00:00Z"

[tool.pytest.ini_options]
testpaths = ["tests"]
