[project]
name = "agent-zoo"
version = "0.1.1b1"
description = "Security harness for AI coding agents (Claude Code, Codex CLI, etc.) — mitmproxy payload inspection + TOML policy control."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "ymdarake" },
]
keywords = [
    "ai",
    "agent",
    "claude",
    "codex",
    "security",
    "sandbox",
    "mitmproxy",
    "harness",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flask>=3.1",
    "flask-wtf>=1.2",  # dashboard CSRF 対策 (Sprint 005 PR B / 包括レビュー H-1)
    "tomli_w>=1.0",
    "pyyaml>=6.0",  # tests/test_dependabot_config.py で .github/dependabot.yml をパース
    "beautifulsoup4>=4.12",  # Sprint 007 PR H: tests/test_dashboard_inline_assets.py で render 後 HTML を parse
]
e2e = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]

[project.scripts]
zoo = "zoo.cli:app"

[project.urls]
Homepage = "https://github.com/ymdarake/agent-zoo"
Repository = "https://github.com/ymdarake/agent-zoo"
Issues = "https://github.com/ymdarake/agent-zoo/issues"
Changelog = "https://github.com/ymdarake/agent-zoo/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoo"]

[tool.hatch.build.targets.wheel.force-include]
# ADR 0002: source の bundle/ を _assets/.zoo/ として配布 (Makefile は除外)
# issue #66: policy.toml → policy/*.toml 5 profile (minimal/claude/codex/gemini/all)
"bundle/docker-compose.yml" = "zoo/_assets/.zoo/docker-compose.yml"
"bundle/docker-compose.strict.yml" = "zoo/_assets/.zoo/docker-compose.strict.yml"
"bundle/policy" = "zoo/_assets/.zoo/policy"
"bundle/container" = "zoo/_assets/.zoo/container"
"bundle/addons" = "zoo/_assets/.zoo/addons"
"bundle/dashboard" = "zoo/_assets/.zoo/dashboard"
"bundle/templates" = "zoo/_assets/.zoo/templates"
"bundle/host" = "zoo/_assets/.zoo/host"
"bundle/dns" = "zoo/_assets/.zoo/dns"

[tool.hatch.build.targets.sdist]
include = [
    "src/zoo",
    "bundle",
    "tests",
    "README.md",
    "README.ja.md",
    "CHANGELOG.md",
    "LICENSE",
    "docs",
]

[tool.uv]
exclude-newer = "2026-03-01T00:00:00Z"

[tool.pytest.ini_options]
# ADR 0003: e2e は重いので default は除外、明示指定で実行
testpaths = ["tests"]
norecursedirs = ["tests/e2e"]
pythonpath = ["bundle"]  # ADR 0002: addons / dashboard を top-level import 可能に
